<resources>
    <string name="app_name">水壶</string>
    <string name="shouye">首页</string>
    <string name="shangcheng">商城</string>
    <string name="wode">我的</string>
    <string name="yangshenghu">养生壶</string>
    <string name="fenlei">分类</string>
    <string name="zhuanti">专题</string>
    <string name="store">store</string>
    <string name="tuijian">相关推荐</string>
    <string name="gouwuche">购物车</string>
    <string name="jiesuan">结算</string>
    <string name="zongji">0</string>
    <string name="wodegouwuche">购物车</string>
    <string name="gerenshuom">个人信息</string>
    <string name="shiyongshuom">使用说明</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="lijigoumai">加入购物车</string>
    <string name="zongjiner">总金额</string>
    <string name="settings">设置</string>
    <string name="add">+</string>
    <string name="yangshengtang">养生汤</string>
    <string name="huacha">花茶</string>
    <string name="shuiguocha">水果茶</string>
    <string name="zhufei">煮沸</string>
    <string name="lijiegoumai">立即购买</string>
    <string name="yangshenghulieb">养生壶</string>
    <string name="addresg">地址</string>
    <string name="jiner">99</string>
    <string name="shiyongrenshu">4.5万人在使用</string>
    <string name="lishijilu">历史记录</string>
    <string name="shangyueshiyongjilu">上月使用情况(2017-05)</string>
    <string name="pingjunmeitianshiyongcishu">平均每天使用次数</string>
    <string name="cishu">0</string>
    <string name="shaoshuirongliang">平均每天烧水容量</string>
    <string name="shengshu">9L</string>
    <string name="zuiduoshiyongwendu">最多使用设置温度</string>
    <string name="wendu">100°C</string>
    <string name="zongyongdianliang">总用电量</string>
    <string name="dianliang">210.000w.h</string>
    <string name="diyicishiyong">第一次使用时间</string>
    <string name="shijian">00:00</string>
    <string name="zongtianshu">总共使用天数</string>
    <string name="tianshu">0</string>
    <string name="zonggongzuoshijian">总共工作小时数</string>
    <string name="xiaoshi">0</string>
    <string name="kaishishijian">开始时间</string>
    <string name="shuiliang">水量</string>
    <string name="wendus">温度</string>
    <string name="haodian">耗电</string>
    <string name="caozuofangshi">操作方式</string>
    <string name="shifenmiao">07:06:12</string>
    <string name="nianyueri">2017-05-16</string>
    <string name="shuiliangs">1.1L</string>
    <string name="wenduyibai">100°C</string>
    <string name="qishiwa">70w</string>
    <string name="caozuofangshis">操作方式</string>
    <string name="yangshengtang1">养生汤</string>
    <string name="shangchengshuihu">水壶</string>
    <string name="action_settings">Settings</string>
    <string name="change">修改</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="me">我</string>
    <string name="submitsuccess">提交成功</string>
    <string name="save_success">保存成功</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="dialog_title">温馨提示</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="title_activity_yjlist">YJListActivity</string>
    <string name="title_activity_msg_not">MsgNotActivity</string>
    <string name="title_activity_wifi_set">WifiSetActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="attendance_search_phone">手机号</string>
    <string name="attendance_search_name">姓名</string>
    <string name="attendance_group">团队名单</string>
    <string name="attendance_add_confirm">确认添加</string>
    <string name="attendance_add_contact">手机联系人</string>
    <string name="attendance_add_contact_describe">添加或邀请通讯录中的朋友</string>
    <string name="attendance_add_member">添加同事</string>
    <string name="attendance_add_name_error">添加姓名不能为空</string>
    <string name="attendance_add_phone_error">添加手机号不能为空</string>
    <string name="attendance_history">出勤详情</string>
    <string name="attendance_history_statistics">本月情况统计</string>
    <string name="attendance_history_attend">考勤天数:</string>
    <string name="attendance_history_absent">缺勤天数:</string>
    <string name="attendance_setting_name">公司名称</string>
    <string name="attendance_setting_id">考勤ID</string>
    <string name="attendance_setting_default">缺省工作时间设置</string>
    <string name="attendance_member_name">考勤人:</string>
    <string name="attendance_member_id">考勤ID:</string>
    <string name="attendance_member_phone">手机号:</string>
    <string name="attendance_member_worktime">考勤时间:</string>
    <string name="attendance_status_attend">正常</string>
    <string name="attendance_status_late">迟到</string>
    <string name="attendance_status_absent">缺勤</string>
    <string name="attendance_member_week">工作日设置</string>
    <string name="attendance_member_day">工作时长设置</string>
    <string name="home_monday">一</string>
    <string name="home_tuesday">二</string>
    <string name="home_wednesday">三</string>
    <string name="home_thursday">四</string>
    <string name="home_friday">五</string>
    <string name="home_saturday">六</string>
    <string name="home_sunday">日</string>
    <string name="hum_name">加湿器</string>
    <string name="hum_state">状态</string>
    <string name="hum_state_empty">空闲</string>
    <string name="hum_state_work">加湿中</string>
    <string name="hum_state_anion">负离子</string>
    <string name="hum_state_stay">保湿中</string>
    <string name="hum_state_nowater">缺水</string>
    <string name="hum_state_nowaterhint">加湿器缺水</string>
    <string name="hum_mode_dry">干爽</string>
    <string name="hum_mode_cozy">舒适</string>
    <string name="hum_mode_wet">水润</string>
    <string name="hum_getstate_error">加湿器状态错误</string>
    <string name="hum_getstate_connerror">获取加湿器状态失败</string>
    <string name="hum_timing_name">预约</string>
    <string name="hum_custom_name">自定义模式</string>
    <string name="hum_custom_city">城市</string>
    <string name="hum_custom_citytemp">环境温度</string>
    <string name="hum_custom_citywet">环境湿度</string>
    <string name="hum_custom_wetset">设定湿度</string>
    <string name="hum_custom_notificatingset">智能加湿</string>
    <string name="hum_custom_notificatingset_nearstart">用户出现自动开启</string>
    <string name="hum_custom_notificatingset_farstop">用户离开自动关闭</string>
    <string name="hum_custom_notificatingset_dryremind">湿度低于40%提醒</string>
    <string name="hum_custom_notificatingset_nowaterremind">缺水提醒</string>
    <string name="hum_custom_notificatingset_startandstopremind">开启/关闭提醒</string>
    <string name="feedback_main">意见反馈</string>
    <string name="feedback_detail">详情</string>
    <string name="customer_service">客服</string>
    <string name="add_device">添加设备</string>
    <string name="del_device">刪除设备</string>
    <string name="device_detail">设备详情</string>
    <string name="my_kettle">我的水壶</string>
    <string name="connecting">connecting</string>
    <string name="history_record">历史记录</string>
    <string name="delete_device">删除商品</string>
    <string name="add_device_success">绑定商品成功</string>
    <string name="delete_device_success">删除商品成功</string>
    <string name="add_device_failed">绑定商品失败</string>
    <string name="update_nonecessary">当前已是最新版本，不需要更新</string>
    <string name="my_device">我的设备</string>
    <string name="edit">编辑</string>
    <string name="finished">完成</string>
    <string name="more_product">更多产品</string>
    <string name="share">分享</string>
    <string name="message_hint">消息提示</string>
    <string name="setting">设置</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="weekly_repeat">选择周期</string>
    <string name="heating">加热中</string>
    <string name="purify">净化中</string>
    <string name="insulation">保温中</string>
    <string name="cooldown">冷却中</string>
    <string name="alarm">定时</string>
    <string name="alarm_set_success">预约成功</string>
    <string name="alarm_delete_success">删除预约成功</string>
    <string name="heating_cancel_failed">取消加热失败，你也许要检查水壶状态，并拔下电源</string>
    <string name="alarm_delete_confirm">是否取消当前预约</string>
    <string name="alarm_set_confirm">是否发送预约</string>
    <string name="alarm_set_failed">发送预约失败</string>
    <string name="alarm_edit">编辑预约</string>
    <string name="alarm_edit_confirm">是否修改该预约</string>
    <string name="custom">自定义</string>
    <string name="purify_length">净化时间</string>
    <string name="minite">分钟</string>
    <string name="caculate_time">预计时间</string>
    <string name="insulation_length">保温时间</string>
    <string name="add_success">添加成功</string>
    <string name="user_help">用户帮助</string>
    <string name="website">产品网站</string>
    <string name="aftersale_service">售后服务</string>
    <string name="termsofuse">使用条款</string>
    <string name="copyright">版权所有：广州星奕科技有限公司</string>
    <string name="add_new_device">添加新设备</string>
    <string name="add_old_device">添加已有设备</string>
    <string name="add_hint">1.请确认电器已接上电源 \n2.根据说明书指示常按wifi控制按键，直至wifi指示灯进入快速闪烁状态\n3.再进行搜索。</string>
    <string name="add_one_device">已收到一台设备</string>
    <string name="wifi_account">WIFI账号</string>
    <string name="wifi_password">WIFI密码</string>
    <string name="wifi_password_hint">请输入wifi密码</string>
    <string name="search">搜索</string>
    <string name="alarm_set_hint">请选择预约时间</string>
    <string name="alarm_set_mode_hint">请选择预约模式</string>
    <string name="never">仅一次</string>
    <string name="label">标签</string>
    <string name="boil">煮沸</string>
    <string name="start_notificate">开始提醒</string>
    <string name="stop_notificate">结束提醒</string>
    <string name="short_of_water_remaind">缺水提醒</string>
    <string name="milk">牛奶</string>
    <string name="juhuacha">菊花茶</string>
    <string name="boil_then_cooldown">煮沸冷却到设定温度</string>
    <string name="lastmonth_history_record">上月使用情况</string>
    <string name="daily_use_time">平均每天使用次数</string>
    <string name="daily_use_volume">平均每天烧水容量</string>
    <string name="most_use_temp">最多使用设置温度</string>
    <string name="total_power">总用电量</string>
    <string name="time">时间</string>
    <string name="volume">水量</string>
    <string name="temp">温度</string>
    <string name="power">耗电</string>
    <string name="operation">操作</string>
    <string name="setting_temp">目标温度</string>
    <string name="mode">模式</string>
    <string name="device_id">设备编号</string>
    <string name="device_name">设备名称</string>
    <string name="label_hint">请输入标签</string>
    <string name="kettle">水壶</string>
    <string name="hum">加湿器</string>
    <string name="message_set">消息设置</string>
    <string name="notification_set">通知设置</string>
    <string name="feedback_hint">请输入意见反馈</string>
    <string name="submit">提交</string>
    <string name="manual">手动</string>
    <string name="shouhuoren">收货人:</string>
    <string name="xingming"> 梅华黎</string>
    <string name="shoujihaoma">17620193389</string>
    <string name="shouhuodizhi">收货地址:</string>
    <string name="shouhuoxiangxidizhi">广东省广州市天河区,珠村，盈丰大厦505</string>
   <string name="grenxinxi">个人信息</string>
   <string name="zhanghao">账号</string>
   <string name="mingcheng">名称</string>
   <string name="xingbie">性别</string>
   <string name="xingming2">****</string>
   <string name="xingbie2">男</string>
   <string name="gouwujilu">购物记录</string>
   <string name="shouhuodizhi2">收货地址</string>
</resources>