<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/huise"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/tianlan"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/image_back"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/zuo_back"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textColor="@color/txt_balck"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/grenxinxi"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/zhanghao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/shoujihaoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/huise"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
    <RelativeLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
                android:text="@string/mingcheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/xingming2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/huise"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>
    <RelativeLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/xingbie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/xingbie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/gouwujilu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/youjiantou"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="35dp"
            android:layout_height="25dp" />
    </RelativeLayout>
    <RelativeLayout
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/shouhuodizhi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/youjiantou"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="35dp"
            android:layout_height="25dp" />
    </RelativeLayout>

</LinearLayout>