<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_date"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:text="@string/shifenmiao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/tv_shuiliang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/shuiliangs"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/tv_wendu"
                android:gravity="center"
                android:text="@string/wenduyibai"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/tv_haodian"
                android:gravity="center"
                android:text="@string/qishiwa"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/tv_caozuo"
                android:gravity="center"
                android:text="@string/caozuofangshis"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/huise"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"/>

</LinearLayout>