<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="32dp"
                android:textColor="@color/txt_balck"
                android:textSize="20sp"
                android:text="@string/shouhuoren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="16sp"
                android:text="@string/xingming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/shoujihaoma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/shouhuodizhi"
                android:layout_width="18dp"
                android:layout_height="18dp" />
            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="@color/txt_balck"
                android:textSize="20sp"
                android:text="@string/shouhuodizhi"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/shouhuoxiangxidizhi"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/backs"
                android:layout_width="30dp"
                android:layout_height="20dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
